Rework String to URL parser